# gazemapping

./: .gitignore  CMakeLists.txt  Cubemap-0000.json  Cubemap-0001.json  Cubemap-0002.json  Cubemap-0003.json  Cubemap-0004.json  LICENSE  README.md  Scene-1.json  Scene-2.json  Scene-3.json  Scene-4.json  Scene-5.json  Scenes.json  run.sh
source/: Catalog.cpp  Catalog.h  Features.cpp  Features.h  Fixation.cpp  Fixation.h  GazePointPersistor.cpp  GazePointPersistor.h  KMeans.cpp  KMeans.h  KeyPointPersistor.cpp  KeyPointPersistor.h  Main.cpp  MatPersistor.cpp  MatPersistor.h  MiniBatchKMeans.cpp  MiniBatchKMeans.h  Pool.h  RobinHood.h  ShootSegmenter.cpp  ShootSegmenter.h  VecKeyPointPersistor.cpp  VecKeyPointPersistor.h  VecMatPersistor.cpp  VecMatPersistor.h  VecPersistor.h  VideoIndex.h  VocabularyTree.cpp  VocabularyTree.h
